# mlops_water_prediction

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.api  Makefile  README.md  docker-compose.yml  dvc.yaml  metrics.json  model_eval.txt  params.yaml  pyproject.toml  setup.py
.dvc/: config
api/: main.py  model_loader.py  schemas.py
docs/: Makefile  conf.py  index.rst  make.bat
mlruns/.trash/588780771746933558/: meta.yaml
mlruns/.trash/671063365236876414/: meta.yaml
mlruns/0/: meta.yaml
mlruns/225873157481061870/: meta.yaml
mlruns/225873157481061870/06b492ab7b5b4067a1d49f51a3c12f45/: meta.yaml
mlruns/225873157481061870/16b915bd3c4141ba81bca6d1dac3cbb2/: meta.yaml
mlruns/225873157481061870/70550a34181d40a6bd5676e143db66bc/: meta.yaml
mlruns/225873157481061870/790b432bf09346ca9ca9da2ba001747a/: meta.yaml
mlruns/225873157481061870/80d28c8aa0d04d82b4c2ea31aa8ddff8/: meta.yaml
mlruns/225873157481061870/d5b77b0aacdc477491fcf25e2cc1d3da/: meta.yaml
mlruns/225873157481061870/e4198d63ee1743d98f25e3bc8c4e127c/: meta.yaml
mlruns/225873157481061870/e596766822c74de7b6f6539c39ce60ce/: meta.yaml
mlruns/670256334693401987/: meta.yaml
mlruns/813881461621436572/: meta.yaml
mlruns/937469982141178173/: meta.yaml
mlruns/957801441735058978/: meta.yaml
mlruns/959986198691173668/: meta.yaml
notebooks/: exp1.py  exp2.py
src/: data_collection.py  data_prep.py  exp1.py  exp2.py  model_eval.py  utils.py
src/data/: data_collection.py  data_prep.py
src/model/: model_building.py  model_eval.py
(+181 files in other folders)
