[tool.poetry]
package-mode = false
name = "mlops-water-project"
version = "0.1.0"
description = "water potability prediction using machine learning"
authors = ["kabbajstat"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
scikit-learn = "^1.8.0"
mlflow = "^3.8.0"
pyyaml = "^6.0.3"
numpy = "^2.4.0"
matplotlib = "^3.10.8"
seaborn = "^0.13.2"
dvc = "^3.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"